// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Targets /> > should render null when [dataType!=barcode] 1`] = `""`;

exports[`<Targets /> > should render when [canModify=false] 1`] = `
<BoxGroup>
  <Styled(BoxGroupHeader)>
    <h2>
      <span>
        Targets
      </span>
    </h2>
    <p>
      Manage the allowable sequence targets for this barcode reference.
    </p>
  </Styled(BoxGroupHeader)>
  <TargetItem
    canModify={false}
    key="foo"
    name="foo"
    onEdit={[MockFunction spy]}
    onRemove={[Function]}
  />
</BoxGroup>
`;

exports[`<Targets /> > should render when [canModify=true] 1`] = `
<BoxGroup>
  <Styled(BoxGroupHeader)>
    <h2>
      <span>
        Targets
      </span>
      <Link
        to={
          {
            "state": {
              "addTarget": true,
            },
          }
        }
      >
        Add target
      </Link>
    </h2>
    <p>
      Manage the allowable sequence targets for this barcode reference.
    </p>
  </Styled(BoxGroupHeader)>
  <TargetItem
    canModify={true}
    key="foo"
    name="foo"
    onEdit={[MockFunction spy]}
    onRemove={[Function]}
  />
  <Connect(AddTarget) />
  <Connect(EditTarget) />
</BoxGroup>
`;
